creditas-sf/force-app/main/default/objects/IncomeDataSection__c/IncomeDataSection__c.object-meta.xml
<CustomObject>
    <label>Seção Dados de Renda</label>
    <nameField>
        <label>Seção Dados de Renda Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Seção Dados de Renda</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>