creditas-sf/force-app/main/default/objects/IncomeDataSection__c/fields/ConfirmedMonthlyIncomeObservation__c.field-meta.xml
<CustomField>
    <fullName>ConfirmedMonthlyIncomeObservation__c</fullName>
    <label>Observação da renda confirmada</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>