creditas-sf/force-app/main/default/objects/IncomeDataSection__c/fields/ConfirmedMonthlyIncomeReason__c.field-meta.xml
<CustomField>
    <fullName>ConfirmedMonthlyIncomeReason__c</fullName>
    <label>Motivo da renda confirmada</label>
    <length>100</length>
    <type>Text</type>
</CustomField>