creditas-sf/force-app/main/default/objects/IncomeDataSection__c/fields/ConfirmedMonthlyIncomeSubReason__c.field-meta.xml
<CustomField>
    <fullName>ConfirmedMonthlyIncomeSubReason__c</fullName>
    <label>Sub-motivo da renda confirmada</label>
    <length>100</length>
    <type>Text</type>
</CustomField>