creditas-sf/force-app/main/default/objects/IncomeDataSection__c/fields/MinimalRequiredIncomeObservation__c.field-meta.xml
<CustomField>
    <fullName>MinimalRequiredIncomeObservation__c</fullName>
    <label>Observação da renda mínima</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>