creditas-sf/force-app/main/default/objects/IncomeDataSection__c/fields/MinimalRequiredIncomeReason__c.field-meta.xml
<CustomField>
    <fullName>MinimalRequiredIncomeReason__c</fullName>
    <label>Motivo da renda mínima</label>
    <length>100</length>
    <type>Text</type>
</CustomField>