creditas-sf/force-app/main/default/objects/IncomeDataSection__c/fields/MinimalRequiredIncomeRejectReason__c.field-meta.xml
<CustomField>
    <fullName>MinimalRequiredIncomeRejectReason__c</fullName>
    <label>Motivo Rejeição Renda Mínima</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cliente não atinge a renda mínima</fullName>
            </value>
            <value>
                <fullName>Outros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>