creditas-sf/force-app/main/default/objects/IncomeDataSection__c/fields/MinimalRequiredIncomeSubReason__c.field-meta.xml
<CustomField>
    <fullName>MinimalRequiredIncomeSubReason__c</fullName>
    <label>Sub-motivo da renda mínima</label>
    <length>100</length>
    <type>Text</type>
</CustomField>