creditas-sf/force-app/main/default/objects/IncomeDataSection__c/fields/MonthlyIncomeObservation__c.field-meta.xml
<CustomField>
    <fullName>MonthlyIncomeObservation__c</fullName>
    <label>Observação da renda informada</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>