creditas-sf/force-app/main/default/objects/IncomeDataSection__c/fields/MonthlyIncomeReason__c.field-meta.xml
<CustomField>
    <fullName>MonthlyIncomeReason__c</fullName>
    <label>Motivo da renda informada</label>
    <length>100</length>
    <type>Text</type>
</CustomField>