creditas-sf/force-app/main/default/objects/IncomeDataSection__c/fields/MonthlyIncomeSubReason__c.field-meta.xml
<CustomField>
    <fullName>MonthlyIncomeSubReason__c</fullName>
    <label>Sub-motivo da renda informada</label>
    <length>100</length>
    <type>Text</type>
</CustomField>