creditas-sf/force-app/main/default/objects/IncomeDataSection__c/fields/NetWorthObservation__c.field-meta.xml
<CustomField>
    <fullName>NetWorthObservation__c</fullName>
    <label>Observação do patrimônio</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>