creditas-sf/force-app/main/default/objects/IncomeDataSection__c/fields/NetWorthReason__c.field-meta.xml
<CustomField>
    <fullName>NetWorthReason__c</fullName>
    <label>Motivo do patrimônio</label>
    <length>100</length>
    <type>Text</type>
</CustomField>