creditas-sf/force-app/main/default/objects/IncomeDataSection__c/fields/NetWorthSubReason__c.field-meta.xml
<CustomField>
    <fullName>NetWorthSubReason__c</fullName>
    <label>Sub-motivo do patrimônio</label>
    <length>100</length>
    <type>Text</type>
</CustomField>