creditas-sf/force-app/main/default/objects/IncomeDataSection__c/fields/PresumedMonthlyIncomeObservation__c.field-meta.xml
<CustomField>
    <fullName>PresumedMonthlyIncomeObservation__c</fullName>
    <label>Observação da renda considerada</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>