creditas-sf/force-app/main/default/objects/IncomeDataSection__c/fields/PresumedMonthlyIncomeReason__c.field-meta.xml
<CustomField>
    <fullName>PresumedMonthlyIncomeReason__c</fullName>
    <label>Motivo da renda considerada</label>
    <length>100</length>
    <type>Text</type>
</CustomField>