creditas-sf/force-app/main/default/objects/IncomeDataSection__c/fields/PresumedMonthlyIncomeSubReason__c.field-meta.xml
<CustomField>
    <fullName>PresumedMonthlyIncomeSubReason__c</fullName>
    <label>Sub-motivo da renda considerada</label>
    <length>100</length>
    <type>Text</type>
</CustomField>