creditas-sf/force-app/main/default/objects/IncomeDataSection__c/fields/ProfessionalSituationObservation__c.field-meta.xml
<CustomField>
    <fullName>ProfessionalSituationObservation__c</fullName>
    <label>Observação da situação profissional</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>