creditas-sf/force-app/main/default/objects/IncomeDataSection__c/fields/ProfessionalSituationReason__c.field-meta.xml
<CustomField>
    <fullName>ProfessionalSituationReason__c</fullName>
    <label>Motivo da situação profissional</label>
    <length>100</length>
    <type>Text</type>
</CustomField>