creditas-sf/force-app/main/default/objects/IncomeDataSection__c/fields/ProfessionalSituationSubReason__c.field-meta.xml
<CustomField>
    <fullName>ProfessionalSituationSubReason__c</fullName>
    <label>Sub-motivo da situação profissional</label>
    <length>100</length>
    <type>Text</type>
</CustomField>