creditas-sf/force-app/main/default/objects/IncomeDataSection__c/fields/ProfessionObservation__c.field-meta.xml
<CustomField>
    <fullName>ProfessionObservation__c</fullName>
    <label>Observação da profissão</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>