creditas-sf/force-app/main/default/objects/IncomeDataSection__c/fields/ProfessionPendingReason__c.field-meta.xml
<CustomField>
    <fullName>ProfessionPendingReason__c</fullName>
    <label>Motivo Pendência Profissão</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Comprovante de renda divergente da ocupação do cliente</fullName>
            </value>
            <value>
                <fullName>Outros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>