creditas-sf/force-app/main/default/objects/IncomeDataSection__c/fields/ProfessionReason__c.field-meta.xml
<CustomField>
    <fullName>ProfessionReason__c</fullName>
    <label>Motivo da profissão</label>
    <length>100</length>
    <type>Text</type>
</CustomField>