creditas-sf/force-app/main/default/objects/IncomeDataSection__c/fields/ProfessionSubReason__c.field-meta.xml
<CustomField>
    <fullName>ProfessionSubReason__c</fullName>
    <label>Sub-motivo da profissão</label>
    <length>100</length>
    <type>Text</type>
</CustomField>