creditas-sf/force-app/main/default/objects/IncomeDataSection__c/fields/ReportedIncomePendingReason__c.field-meta.xml
<CustomField>
    <fullName>ReportedIncomePendingReason__c</fullName>
    <label>Motivo Pendência Renda informada</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Documeneto não aceito/inválido</fullName>
            </value>
            <value>
                <fullName>Documento de renda ilegível 	Documento incompleto</fullName>
            </value>
            <value>
                <fullName>Outros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>